@@ -31,6 +31,8 @@ extern void falling_factorial(mpz_t r, UV x, UV n);
 extern void faulhaber_sum(mpz_t sum, mpz_t zn, unsigned long p);
 
 extern void powerful_count(mpz_t r, mpz_t n, unsigned long k);
+extern void perfect_power_count(mpz_t r, mpz_t n);
+extern void prime_power_count(mpz_t r, mpz_t n);
 
 extern int  is_carmichael(mpz_t n);
 extern int  is_fundamental(mpz_t n);
@@ -48,6 +50,9 @@ extern void count_primes(mpz_t count, mpz_t lo, mpz_t hi);
 extern UV* sieve_primes(mpz_t low, mpz_t high, UV k, UV *rn);
 extern UV* sieve_twin_primes(mpz_t low, mpz_t high, UV twin, UV *rn);
 extern UV* sieve_cluster(mpz_t low, mpz_t high, uint32_t* cl, UV nc, UV *rn);
+/* Helper function for count_primes */
+extern void prime_count0(mpz_t count, mpz_t hi);
+extern void prime_count(mpz_t count, mpz_t lo, mpz_t hi);
 
 extern void next_twin_prime(mpz_t res, mpz_t n);
 
